Change action permission
I don't think actions can globally have write access anymore which is why this is needed.

--- a/.github/workflows/doc_deploy.yml
+++ b/.github/workflows/doc_deploy.yml
@@ -12,6 +12,9 @@ on:
 
 jobs:
   build_and_deploy:
+      permissions:
+        contents: write
+        pages: write
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
