--- a/.github/workflows/workshop.yml
+++ b/.github/workflows/workshop.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
+        with:
+          submodules: "recursive"
 
       - uses: vurv78/gmod-upload@v0.1.4
         with:
